Small code optimizations (#607)